# EMtranscriber

./: .gitignore  EMtranscriber-fullml.spec  EMtranscriber.spec  LICENSE  README.md  USER_MANUAL_EN.md  USER_MANUAL_IT.md  pyproject.toml  requirements-ml.txt  requirements.txt
migrations/: 001_initial.sql  002_job_speaker_options.sql  003_job_artifacts_root.sql  004_job_execution_duration.sql
packaging/assets/: README.md
scripts/: build_windows.ps1  install_ml_runtime.ps1  prepare_branding_assets.py  sync_branding_resources.py
src/emtranscriber/: __init__.py  bootstrap.py  main.py
src/emtranscriber/application/dto/: __init__.py  analysis_request_options.py  analysis_run_result.py  new_job_request.py
src/emtranscriber/application/services/: __init__.py  job_queue_state_machine.py  transcription_orchestrator.py
src/emtranscriber/application/use_cases/: __init__.py  analyze_transcript.py  create_job.py  export_transcript.py  get_transcript_document.py  list_jobs.py  rename_speaker.py  update_segment_text.py
src/emtranscriber/application/workers/: __init__.py  analysis_worker.py  job_processing_worker.py
src/emtranscriber/shared/: i18n.py  logging_config.py  paths.py  theme.py
tests/unit/: test_ai_analysis.py  test_create_job_use_case.py  test_hint_builder.py  test_i18n.py  test_job_queue_state_machine.py  test_job_repository_delete.py  test_job_repository_status_parsing.py  test_settings_store.py  test_shared_paths.py  test_speaker_aligner.py  test_transcript_exporter.py  test_transcript_repository_bulk.py  test_transcription_orchestrator_status_mapping.py
(+59 files in other folders)
