[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emtranscriber"
version = "0.1.0"
description = "Windows-first offline desktop transcription app."
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.8,<7",
]

[project.optional-dependencies]
ml = [
  "faster-whisper>=1.1.0",
  "pyannote.audio>=3.3.0",
]
build = [
  "pyinstaller>=6.0",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
emtranscriber = "emtranscriber.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

